--- a/public/css/monitorRoomStyle.css
+++ b/public/css/monitorRoomStyle.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-#MonitorRoomContainer{
+.MonitorRoomContainer{
     width: 100%;
     height: 100%;
     display: flex;
@@ -22,8 +22,8 @@
 }
 
 .roomAvailable{
-    width: 170px;
-    height: 170px;
+    width: 100px;
+    height: 100px;
     background-color:green;
     display: flex;
     align-items: center;
@@ -34,8 +34,8 @@
 }
 
 .roomNotAvailable{
-    width: 170px;
-    height: 170px;
+    width: 100px;
+    height: 100px;
     background-color:red;
     display: flex;
     align-items: center;
