--- a/public/css/monitorRoomStyle.css
+++ b/public/css/monitorRoomStyle.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+#break{
+    flex-basis: 100%;
+    height: 0;
+}
+
 .MonitorRoomContainer{
     width: 100%;
     height: 100%;
