--- a/public/css/monitorRoomStyle.css
+++ b/public/css/monitorRoomStyle.css
@@ -2,20 +2,15 @@
     box-sizing: border-box;
 }
 
-#break{
-    flex-basis: 100%;
-    height: 0;
-}
-
-.Parent{
-    margin: 20px;
+body{
+    overflow: hidden;
 }
 
 #select{
     margin-bottom: 10px;
 }
 
-.MonitorRoomContainer{
+.FormContainer{
     width: 100%;
     height: 100%;
     display: flex;
@@ -23,45 +18,22 @@
     margin: 20px;
 }
 
-.room{
-    width: 100px;
-    height: 100px;
-    background-color:green;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px 10px 10px 10px;
-    font-size: 30px;
-    color: white;
-}
-
-.roomAvailable{
-    width: 100px;
-    height: 100px;
-    background-color:green;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px 10px 10px 10px;
-    font-size: 30px;
-    color: white;
-}
-
-.roomNotAvailable{
-    width: 100px;
-    height: 100px;
-    background-color:red;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px 10px 10px 10px;
-    font-size: 30px;
-    color: white;
+.Parent{
+    margin: 20px;
 }
 
 .itemOddContainer{
     display: flex;
     overflow: hidden;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.itemEvenContainer{
+    display: flex;
+    overflow: hidden;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .item{
