--- a/public/css/monitorRoomStyle.css
+++ b/public/css/monitorRoomStyle.css
@@ -51,6 +51,10 @@ body{
     margin-left: 20px;
     margin-top: 10px;
     margin-bottom: 50px;
+    border: 2px solid black;
+    padding: 5px;
+    padding-right: 20px;
+    width: fit-content;
 }
 
 .descriptionItem{
